tests/snapshots/parser_error_fixtures/missing_class_name.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_class_name.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Class Name

Expected class name or constraint after `class`.

  examples/parser_errors/missing_class_name.flx:7:7
  |
7 | class {
  |       ^

Hint:
  Class declarations use `class Name<a> { ... }`.


error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/missing_class_name.flx:9:1
  |
8 |     fn size(x: a) -> Int
  |     - `size` starts here
9 | }
  | ^
  | - This looks like the function body

Note:
  while parsing function `size`

Help:
  Try adding `{` after the function signature.

Found 2 errors.
== stdout ==
<not executed>
